2011-02-16 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-icontext-factory.c: Fix string list regression

	* src/core/na-boxed.c: Fix regression when setting values.

	* src/core/na-selected-info.c (query_file_attributes):
	Keep selection info even when unable to query attributes.
	Fix #641464.

2011-02-15 Pierre Wieser <pwieser@trychlos.org>

	Do not compile with GConf library when disabled

	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h:
	* src/core/na-gconf-migration.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c:
	* src/io-gconf/Makefile.am:
	* src/io-xml/naxml-reader.c:
	* src/utils/Makefile.am: Updated accordingly.

2011-02-14 Pierre Wieser <pwieser@trychlos.org>

	Add --enable-gconf configure argument
	Define HAVE_GCONF conditional

	* m4/na-check-for-gconf.m4: New file.

	* configure.ac:
	* data/gconf-schemas/Makefile.am: Updated accordingly.

	Only GConf writing operations are marked deprecated

	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c:
	* src/io-gconf/nagp-writer.c:
	* src/io-gconf/nagp-writer.h: Updated accordingly.

	No more use deprecated functions

	* src/core/na-factory-object.c:
	* src/io-desktop/nadp-reader.c:
	* src/io-desktop/nadp-writer.c:
	* src/io-gconf/nagp-reader.c:
	* src/io-gconf/nagp-writer.c:
	* src/io-xml/naxml-reader.c:
	* src/io-xml/naxml-writer.c: Updated accordingly.

	NADataBoxed class now derives from NABoxed

	* src/api/na-boxed.h:
	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/core/na-boxed.c:
	* src/core/na-core-utils.c:
	* src/core/na-data-boxed.c:
	* src/core/na-data-types.c:
	* src/core/na-factory-object.c:
	* src/core/na-ifactory-object.c:
	* src/core/na-settings.c:
	* src/io-desktop/nadp-writer.c:
	* src/io-gconf/nagp-writer.c:
	* src/io-xml/naxml-writer.c: Updated accordingly.

	* src/api/na-boxed.h:
	* src/core/na-boxed.c: Convert to the NABoxed class.
